--- a/HTML_CSS_CLASS/20230126/input_tag.html
+++ b/HTML_CSS_CLASS/20230126/input_tag.html
@@ -74,6 +74,34 @@
     </form>
 
 
+<div>
+    <object data="..//img/ban1.gif" type="" class="w-300 h-200"></object>
+    <object data="..//img/html5.jpg" type="" class="w-100% h-200"></object>
+</div>
+<!-- 영상실습 -->
+<div class="clearfix">
+    <!-- 비디오태그 -->
+    <div class="fr">    
+        <video src="../video/video1.mp4" class="w-300 h-200" autoplay loop></video>
+    </div>
+    <!-- object태그 -->
+    <div class="fr">    
+        <object data="../video/video2.mp4" class="w-300 h-200"></object>
+    </div>
+    <!-- iframe태그 -->
+    <div class="fr">
+        <iframe width="420" height="345" src="https://www.youtube.com/embed/sPyAQQklc1s?autoplay=1" allow="autoplay"></iframe>
+    </div>
+    <!-- iframe태그 -->
+    <div class="fr">
+        <iframe width="100%" height="auto" src="../video/video2.mp4" >
+        </iframe>
+    </div>
+    <!-- 유투브에서공유링크로퍼온것 -->
+    <div>
+        <iframe class="w-300 h-300 fr" src="https://www.youtube.com/embed/NcRifDitRnU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+</div>
 
 </body>
 </html>
