favicon 이미지 추가

--- a/HTML_CSS_CLASS/20230126/input_tag.html
+++ b/HTML_CSS_CLASS/20230126/input_tag.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/HTML_CSS_CLASS/css/common.css">
     <link rel="stylesheet" href="/css/HTML_CSS_CLASS/css/style.css">
-    <link rel="icon" href="../img/favicon.png">
+    <link rel="icon" href="../img/favicon1.png">
     <title>Document</title>
     
     <style>
