starbucks 메인화면 작업 완료

--- a/HTML_CSS_CLASS/20230303/starbucks.html
+++ b/HTML_CSS_CLASS/20230303/starbucks.html
@@ -116,6 +116,42 @@
             left: 10.5%;
             width: 77%;
         }
+        .visual2 {
+            position: absolute;
+            top: 40%;
+            left: 10.5%;
+            width: 77%;
+        }
+        .visual3 {
+            position: absolute;
+            top: 60%;
+            left: 10.5%;
+            width: 77%;
+        }
+        .btn-detail {
+            position: absolute;
+            top: 90%;
+            /* left: 50%; */
+            /* margin:0 auto; */
+            width: 100%;
+            text-align: center;
+        }
+        .btn-detail a {
+            background-color: white;
+            border: 2px solid #005224;
+            border-radius: 5px;
+            padding: 25px 75px;
+            font-size: 22px;
+            font-weight: 700;
+            color: #005224;
+            text-decoration: none;
+        }
+        .btn-detail a:hover {
+            transition: 0.5s;
+            background-color: #005224;
+            color: white;
+            text-decoration: underline;
+        }
         @media screen and (max-width:960px) {
             .slogan,
             .drink1,
@@ -132,24 +168,24 @@
         <div class="menu-icons clearfix">
             <div class="icon icon_logo">
                 <div class="">
-                    <a href="#">
+                    <a href="https://www.starbucks.co.kr/" target="_blank">
                         <img src="../starbucks/logo.png" alt="">
                     </a>
                 </div>
             </div>
             <div class="icon icon_m">
                 <div class="">
-                    <a href="#">
+                    <a href="https://www.starbucks.co.kr/" target="_blank">
                         <img src="../starbucks/icon_user_m.png" alt="">
                     </a>
                 </div>
                 <div class="">
-                    <a href="#">
+                    <a href="https://www.starbucks.co.kr/store/store_map.do" target="_blank">
                         <img src="../starbucks/icon_spot_m.png" alt="">
                     </a>
                 </div>
                 <div class="">
-                    <a href="#">
+                    <a href="https://www.starbucks.co.kr/" target="_blank">
                         <img src="../starbucks/btn_berger_m.png" alt="">
                     </a>
                 </div>
@@ -175,7 +211,7 @@
                 <!-- <div class="image visual3"></div> -->
             </div>
             <div class="btn btn-detail">
-                <a href="">자세히 보기</a>
+                <a href="https://www.starbucks.co.kr/whats_new/campaign_view.do?pro_seq=2134" target="_blank">자세히 보기</a>
             </div>
         </div>
     </div>
